# agent-kaspa-near-ironclaw

./: README.md
ironclaw-config/: allowlist.toml  tool_manifest.toml
kaspa-send-tool/: Cargo.toml  kaspa-send-tool.capabilities.json
kaspa-send-tool/src/: lib.rs
kaspa-send-tool/wit/: world.wit
secrets/: setup.sh
