[package]
name = "kaspa-send-tool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# BIP39 mnemonic handling
bip39 = "2"

# HD derivation + secp256k1 Schnorr signing
bitcoin = { version = "0.31", default-features = false, features = ["secp-recovery"] }
secp256k1 = { version = "0.28", features = ["rand"] }

# Blake2b hashing (Kaspa sighash)
blake2 = "0.10"

# Hex encoding
hex = "0.4"

# HTTP (WASM-compatible)
reqwest = { version = "0.11", default-features = false, features = ["json"] }

# HMAC-SHA512 for BIP32 key derivation
hmac = "0.12"
sha2 = "0.10"

# serde ↔ wasm_bindgen bridge
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "s"   # minimise WASM size
