[package]
name = "kaspa-send-tool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WIT bindgen (cargo-component injects the right version; pin explicitly to be safe)
wit-bindgen = { version = "0.36", default-features = false }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# BIP39 mnemonic
bip39 = "2"

# secp256k1 Schnorr signing (needs clang for C backend; clang is available on this host)
secp256k1 = { version = "0.28", features = ["rand", "global-context"] }

# Blake2b-256 for Kaspa sighash
blake2 = "0.10"

# Hex encoding
hex = "0.4"

# HMAC-SHA512 for BIP32 key derivation
hmac = "0.12"
sha2 = "0.10"

[package.metadata.component]
package = "kaspa:send@0.1.0"

[package.metadata.component.target]
world = "kaspa-send-world"

[profile.release]
opt-level = "s"
