[package]
name = "kaspa-send-tool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WIT bindgen — cargo-component auto-generates bindings.rs that uses wit_bindgen_rt
wit-bindgen = { version = "0.36", features = ["realloc"] }
wit-bindgen-rt = { version = "0.36", features = ["realloc"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# BIP39 mnemonic
bip39 = "2"

# Pure-Rust secp256k1 (BIP340 Schnorr) — no C/clang required for WASM target
k256 = { version = "0.13", features = ["schnorr"] }

# Blake2b-256 for Kaspa sighash
blake2 = "0.10"

# Hex encoding
hex = "0.4"

# HMAC-SHA512 for BIP32 key derivation
hmac = "0.12"
sha2 = "0.10"

[package.metadata.component]
package = "kaspa:send"

[package.metadata.component.target]
world = "kaspa-send-world"

[package.metadata.component.target.dependencies]
"near:agent" = { path = "wit/deps/near-agent" }

[profile.release]
opt-level = "s"
